[package]
name = "hotspot-drop"
version = "0.1.11"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
network-interface = "2.0.0"
urlencoding = "2.1.3"
tokio-util = "0.7.14"
futures-util = "0.3.31"
mime_guess = "2.0.5"
multer = "3.1.0"
qrcode = "0.14.1"
